<resources>
    <string name="BackUp_and_restore">Backup &amp; Restore</string>
    <string name="Import_message">Please wait, while we are getting Movies, Series, live TV channel for you</string>
    <string name="Refreshed">Refreshed Successfully</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About Us</string>
    <string name="accept_terms">Please confirm that you agree to our</string>
    <string name="accept_terms_error">Please Accept privacy policy and Terms &amp; Conditions</string>
    <string name="account_active_connections">Active Connections :</string>
    <string name="account_created_at">Created At :</string>
    <string name="account_expire">Account Expire</string>
    <string name="account_expiry_date">Expiry Date :</string>
    <string name="account_info">Account Info</string>
    <string name="account_is_trial">Is Trial :</string>
    <string name="account_max_connections">Max Connections :</string>
    <string name="account_status">Account Status :</string>
    <string name="account_username">Username :</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_certificate">Add Certificate</string>
    <string name="add_certificate_file">Add Certificate File</string>
    <string name="add_new_player">Add New Player</string>
    <string name="add_player">Add Player</string>
    <string name="add_to_fav">Added To Favorite</string>
    <string name="add_to_favourite">Add To Favorite</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="add_user">Add Profile</string>
    <string name="added_external_player">Player added successfully</string>
    <string name="added_to">Added to</string>
    <string name="added_to_playlist">Added To Playlist</string>
    <string name="agree">Agree</string>
    <string name="album">Album :</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_player">needs to be installed!</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">All</string>
    <string name="all_movies_deleted">All Movies Deleted</string>
    <string name="already_added">Already Added</string>
    <string name="already_fav">Already Favorite</string>
    <string name="android_local_media">Android Local Media</string>
    <string name="app_customisation">App Customization</string>
    <string name="app_id">4F8B3483</string>
    <string name="app_language">App Language</string>
    <string name="app_name">PREMIER TVPLUS</string>
    <string name="app_themes">App Themes</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_add_player">Are you sure you want to add this player ?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="are_you_sure_you_want_to_remove_player">Are you sure you want to remove external player ?</string>
    <string name="artist">Artist :</string>
    <string name="audio">Audios</string>
    <string name="audio_tracks">Audio tracks</string>
    <string name="auto_boot">AutoStart On Boot Up</string>
    <string name="auto_data_update_time_shift">Data Auto Update Time Shift</string>
    <string name="auto_play">Enable Auto Play for Movies and Series</string>
    <string name="auto_update">Enable Auto Refresh Data</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="back">Back</string>
    <string name="back_up">Backup</string>
    <string name="backup_completed">Backup Completed ==></string>
    <string name="backup_error">Unable to backup. Retry</string>
    <string name="begin_test">Begin Test</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="browse">Browse</string>
    <string name="build_in_player_setting">Built-in Player Settings</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="cast">Cast:</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="catch_up">Catch Up</string>
    <string name="choose_login_type">Choose Login Type</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connect_vpn">Connect VPN</string>
    <string name="copy_to">Copy To</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="enable_last_play_channel">Enable Turn On Last Play Channel</string>
    <string name="enable_subtitle">Enable Subtitle</string>
    <string name="epg_time_shift">EPG Time Shift</string>
    <string name="general_setting">General Setting</string>
    <string name="hardware_decoder">Hardware Decoder</string>
    <string name="hide_all_cat_live">Hide All Category From Live TV</string>
    <string name="hide_all_cat_movie">Hide All Category From Movie</string>
    <string name="hide_all_cat_series">Hide All Category From Series</string>
    <string name="hide_live_tv">Hide Live TV (Do not include Live TV)</string>
    <string name="hide_parental_locked_cat">Hide Parental Locked Categories</string>
    <string name="hls_format">HLS (.m3u8)</string>
    <string name="live_customisation">Live TV Customization</string>
    <string name="load_your_playlist_with_file_url">Load Your M3U Playlist</string>
    <string name="login_with_panel_api">Login With Panel API</string>
    <string name="login_with_xtream_api">Login With Xtream Codes API</string>
    <string name="move_to">Move To</string>
    <string name="movie_customisation">Movie Customization</string>
    <string name="mpeg_format">MPEGTS (.ts)</string>
    <string name="mx_player">MX Player</string>
    <string name="native_player">Native Player</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="open_gl">Enable OpenGL (OpenGL Pixel Format)</string>
    <string name="open_sl_ES">Enable OpenSL ES (Hardware accelerated audio)</string>
    <string name="play_with_cast">Play With Cast</string>
    <string name="play_with_mx_player">Play with MX player</string>
    <string name="play_with_vlc_player">Play with VLC player</string>
    <string name="player_selection">Player Selection</string>
    <string name="recording">Recording</string>
    <string name="remove_from_fav">Removed From Favorite</string>
    <string name="remove_from_favourite">Remove From Favorite</string>
    <string name="remove_from_playlist">Removed From Playlist</string>
    <string name="select_theme">Select Theme</string>
    <string name="series_customisation">Series Customization</string>
    <string name="show_live_category">Show Live TV lists Category</string>
    <string name="show_movie_category">Show Movie lists Category.</string>
    <string name="show_series_category">Show Series lists Category.</string>
    <string name="software_decoder">Software Decoder</string>
    <string name="sort_default">Default</string>
    <string name="stream_format">Stream Format</string>
    <string name="subtitles_tracks">Subtitle tracks</string>
    <string name="theme_five">Theme 5</string>
    <string name="theme_fourth">Theme 4</string>
    <string name="theme_second">Theme 2</string>
    <string name="theme_third">Theme 3</string>
    <string name="time_format">Time Format</string>
    <string name="time_format_12">12 Hours Format</string>
    <string name="time_format_24">24 Hours Format</string>
    <string name="title">Title</string>
    <string name="update_password">Update Password</string>
    <string name="video_tracks">Video Tracks</string>
    <string name="vlc_player">VLC Player</string>
</resources>