<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:paddingTop="@dimen/_10sdp" android:paddingStart="@dimen/_20sdp" android:paddingEnd="@dimen/_20sdp" style="@style/parentStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_password" style="@style/TextViewTitle" />
    <EditText android:id="@id/etOldPassword" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:hint="@string/old_password" android:inputType="text" android:imeOptions="actionNext" style="@style/Edit_Text" />
    <EditText android:id="@id/etNewPassword" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:hint="@string/new_password" android:inputType="text" android:imeOptions="actionNext" style="@style/Edit_Text" />
    <EditText android:id="@id/etConfirmPassword" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:hint="@string/confirm_password" android:inputType="text" android:imeOptions="actionGo" style="@style/Edit_Text" />
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/button_layout" />
</LinearLayout>