<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" style="@style/parentStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/_150sdp" android:src="@drawable/ic_app_logo" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_10sdp" />
    <TextView android:gravity="center" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/choose_login_type" style="@style/TextViewSmallTitle" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:layout_marginStart="@dimen/spacing_30" android:layout_marginEnd="@dimen/_20sdp">
        <Button android:gravity="center" android:id="@id/tv_login_with_xtreamcode_api" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_with_xtream_api" style="@style/TextViewSmallTitle" />
        <Button android:gravity="center" android:id="@id/tv_load_your_playlist_url" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_20" android:text="@string/load_your_playlist_with_file_url" style="@style/TextViewSmallTitle" />
        <Button android:gravity="center" android:id="@id/tv_local_media" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_20" android:text="@string/android_local_media" style="@style/TextViewSmallTitle" />
        <Button android:gravity="center" android:id="@id/buttonVpn" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_20" android:text="@string/connect_vpn" style="@style/TextViewSmallTitle" />
        <Button android:gravity="center" android:id="@id/tv_Login_with_panel_apis" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_20" android:text="@string/login_with_panel_api" style="@style/TextViewSmallTitle" />
        <Button android:textColor="@color/colorBlack" android:gravity="center" android:id="@id/tv_Login_with_panel_m3u" android:background="@drawable/button_drawable" android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_20" android:text="@string/load_your_playlist_with_file_url" />
    </LinearLayout>
</LinearLayout>